unpackaged/main/default/objects/Direct_Purchase_User__c/Direct_Purchase_User__c.object-meta.xml
<CustomObject>
    <description>Related to Opportunities to store direct purchase users added by sales during the buy now flow</description>
    <label>Direct Purchase User</label>
    <nameField>
        <displayFormat>DPU-{0000000}</displayFormat>
        <label>User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direct Purchase Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>