unpackaged/main/default/objects/Direct_Purchase_User__c/fields/Activation_Link__c.field-meta.xml
<CustomField>
    <fullName>Activation_Link__c</fullName>
    <description>Link to activate MyCase account through Direct Purchase flow</description>
    <label>Activation Link</label>
    <type>Url</type>
</CustomField>