unpackaged/main/default/objects/Direct_Purchase_User__c/fields/Add_User_Failed__c.field-meta.xml
<CustomField>
    <fullName>Add_User_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked in flow when adding user flow fails</description>
    <label>Add User Failed</label>
    <type>Checkbox</type>
</CustomField>