unpackaged/main/default/objects/Direct_Purchase_User__c/fields/Direct_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Direct_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when record is added from direct purchase flow vs. add users to trial</description>
    <label>Direct Purchase</label>
    <type>Checkbox</type>
</CustomField>