unpackaged/main/default/objects/Direct_Purchase_User__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Name</label>
    <type>Text</type>
</CustomField>