unpackaged/main/default/objects/Direct_Purchase_User__c/fields/MyCase_Role__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Role__c</fullName>
    <label>MyCase Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Paralegal</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>