unpackaged/main/default/objects/Direct_Purchase_User__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity related to the user added through the buy now flow</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Direct Purchase Users</relationshipLabel>
    <relationshipName>Direct_Purchase_Users</relationshipName>
    <type>Lookup</type>
</CustomField>