unpackaged/main/default/objects/Direct_Purchase_User__c/fields/Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Email__c</fullName>
    <description>Email address of the sales rep to cc</description>
    <label>Sales Rep Email</label>
    <type>Email</type>
</CustomField>