unpackaged/main/default/objects/Direct_Purchase_User__c/fields/Send_Activation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Activation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Activation Email</label>
    <type>Checkbox</type>
</CustomField>