unpackaged/main/default/objects/Direct_Purchase_User__c/fields/Send_Activation_Link__c.field-meta.xml
<CustomField>
    <fullName>Send_Activation_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sends activation link when checked</description>
    <label>Send Activation Link</label>
    <type>Checkbox</type>
</CustomField>