unpackaged/main/default/objects/Direct_Purchase_User__c/fields/User_UUID__c.field-meta.xml
<CustomField>
    <fullName>User_UUID__c</fullName>
    <label>User UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>